<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_main"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_main" />

        <item
            android:id="@+id/menu_food_list"
            android:icon="@drawable/ic_dish_menu"
            android:title="@string/food_list" />

        <item
            android:id="@+id/menu_table_list"
            android:icon="@drawable/ic_list_table"
            android:title="@string/table_list" />

        <item
            android:id="@+id/menu_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/menu_report"
            android:icon="@drawable/ic_statistics"
            android:title="@string/menu_report" />

        <item
            android:id="@+id/menu_payment"
            android:icon="@drawable/ic_payment"
            android:title="@string/menu_payment" />

        <item
            android:id="@+id/menu_printer"
            android:icon="@drawable/ic_printer"
            android:title="@string/menu_printer" />

        <item
            android:id="@+id/menu_info"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_info" />

    </group>
</menu>