<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.foodorder.fooder.restaurantorder.views.ToolBarCustom
        android:id="@+id/toolbarCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isBackShown="true"
        app:layout_constraintTop_toTopOf="parent"
        app:titleBar="@string/title_image_screen" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/image_preview_card"
        android:layout_width="@dimen/dp_00"
        android:layout_height="@dimen/dp_200"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/take_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_action_done">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_action_done"
        style="@style/ButtonScreenDetail"
        android:layout_width="@dimen/dp_00"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginBottom="16dp"
        android:text="@string/accept"
        android:background="@drawable/bg_bottom_continue_enable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/take_image_button"
        style="@style/ButtonScreenDetail"
        android:layout_width="@dimen/dp_00"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginTop="16dp"
        android:text="@string/open_camera"
        android:background="@drawable/bg_common_button_disable"
        app:layout_constraintTop_toBottomOf="@+id/toolbarCustom"
        app:layout_constraintEnd_toStartOf="@+id/select_image_button"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/select_image_button"
        android:background="@drawable/bg_bottom_edit_enable"
        style="@style/ButtonScreenDetail"
        android:layout_width="@dimen/dp_00"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginTop="16dp"
        android:text="@string/open_gallery"
        app:layout_constraintTop_toBottomOf="@+id/toolbarCustom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/take_image_button" />

</androidx.constraintlayout.widget.ConstraintLayout>