<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.foodorder.fooder.restaurantorder.views.ToolBarCustom
            android:id="@+id/toolbarCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            app:isBackShown="true"
            app:layout_constraintTop_toTopOf="parent"
            app:titleBar="@string/title_bill"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottomViews"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/opacity_blur_1_end">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentTop="true"
                android:background="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0_5"
                android:layout_alignParentTop="true"
                android:background="@color/black" />

            <TextView
                android:id="@+id/title_totalbill"
                style="@style/AppTheme.TextView.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:text="@string/total_bill"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/totalbill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:layout_toRightOf="@id/title_totalbill"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/title_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/receive"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:text="@string/amount_of_change"
                android:textColor="@color/black"
                style="@style/AppTheme.TextView.Title1"/>

            <TextView
                android:id="@+id/change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/receive"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:layout_toRightOf="@id/title_change"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold|italic" />

            <com.foodorder.fooder.restaurantorder.views.IEditTextView
                android:id="@+id/receive"
                style="@style/AppTheme.TextView.Title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/totalbill"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:hint="@string/receive_money"
                android:inputType="numberDecimal"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_apply"
                style="@style/ButtonScreenDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/change"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:enabled="false"
                android:text="@string/button_payment"
                android:textSize="@dimen/dp_20"
                android:textStyle="bold" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/entities_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/rv_data"
            app:layout_constraintTop_toBottomOf="@id/toolbarCustom"
            android:padding="@dimen/dp_10"
            android:background="@color/semantic_orange_1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@id/gl1"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center"
                android:textStyle="bold"
                style="@style/AppTheme.TextView.Title1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/gl1"
                app:layout_constraintEnd_toEndOf="@id/gl2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center"
                android:textStyle="bold"
                style="@style/AppTheme.TextView.Title1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/total_price"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/gl2"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/AppTheme.TextView.Title1"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.45"
                android:background="@color/black"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.7"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/entities_title"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/entities_title"
            app:layout_constraintBottom_toTopOf="@id/bottomViews"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>