<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <import type="android.content.Context" />

        <variable
            name="vm"
            type="com.foodorder.fooder.restaurantorder.viewmodels.TableListAddedViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.foodorder.fooder.restaurantorder.views.ToolBarCustom
            android:id="@+id/toolbarCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            app:isBackShown="true"
            app:layout_constraintTop_toTopOf="parent"
            app:titleBar="@string/add_table" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_apply"
            style="@style/ButtonScreenDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:enabled="@{vm.isTableItemDataValid()}"
            android:text="@string/add_new"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_00"
            android:layout_margin="@dimen/dp_10"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/btn_apply"
            app:layout_constraintTop_toBottomOf="@+id/toolbarCustom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_table"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_150"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/dp_20"
                    app:srcCompat="@drawable/ic_icon" />

                <com.foodorder.fooder.restaurantorder.views.IEditTextView
                    android:id="@+id/et_table_name"
                    style="@style/AppTheme.TextView.Title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_05"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_05"
                    android:hint="@string/table_name"
                    android:text="@{vm.tableItemLiveData.name}"
                    tools:text="Bàn 1" />

                <com.foodorder.fooder.restaurantorder.views.IEditTextView
                    android:id="@+id/et_status"
                    style="@style/AppTheme.TextView.Title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_05"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_05"
                    android:hint="@string/food_status"
                    android:text="@{vm.tableItemLiveData.status}"
                    android:textColor="@color/neutral_purple_1"
                    tools:text="Ngồi ghế" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>