<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <import type="android.content.Context" />

        <variable
            name="vm"
            type="com.foodorder.fooder.restaurantorder.viewmodels.FoodListAddedViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.foodorder.fooder.restaurantorder.views.ToolBarCustom
            android:id="@+id/toolbarCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            app:isBackShown="true"
            app:layout_constraintTop_toTopOf="parent"
            app:titleBar="@string/title_add_food" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_apply"
            style="@style/ButtonScreenDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:enabled="@{vm.isFoodItemDataValid()}"
            android:text="@string/add_new"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_00"
            android:layout_margin="@dimen/dp_10"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/btn_apply"
            app:layout_constraintTop_toBottomOf="@+id/toolbarCustom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/image_preview_card"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_150"
                    android:layout_margin="@dimen/dp_10"
                    app:cardElevation="8dp"
                    app:layout_constraintDimensionRatio="16:9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_food"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        tools:src="@tools:sample/backgrounds/scenic" />

                </com.google.android.material.card.MaterialCardView>


                <com.foodorder.fooder.restaurantorder.views.IEditTextView
                    android:id="@+id/et_food_name"
                    style="@style/AppTheme.TextView.Title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_05"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_05"
                    android:hint="@string/food_name"
                    android:text="@{vm.foodItemLiveData.name}"
                    tools:text="Món A" />

                <com.foodorder.fooder.restaurantorder.views.IEditTextView
                    android:id="@+id/et_price"
                    style="@style/AppTheme.TextView.Title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_05"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_05"
                    android:hint="@string/food_price"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:text="@{vm.foodItemLiveData.price}"
                    app:endTextView="@{vm.foodItemLiveData.currencyCode}"
                    tools:text="2,000,000 VND" />

                <com.foodorder.fooder.restaurantorder.views.IEditTextView
                    android:id="@+id/et_status"
                    style="@style/AppTheme.TextView.Title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_05"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_05"
                    android:hint="@string/food_status"
                    android:text="@{vm.foodItemLiveData.status}"
                    android:textColor="@color/neutral_purple_1"
                    tools:text="Ngồi ghế" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>